tests/script_runtime_errors/obj_bad_key/error.txt
Error: 
    1 | event.badger
      |       ^^^^^^ Trying to access a non existing event key `badger`